@@ -121,7 +121,7 @@ extern "C"
  * Current version of the library.
  * 0x01093001 = 1.9.30-1.
  */
-#define MHD_VERSION 0x00093201
+#define MHD_VERSION 0x00093202
 
 /**
  * MHD-internal return code for "YES".
